[package]
name = "benchmarks"
version = "0.0.0"
publish = false
edition = "2021"
license = "MIT"

[features]
tokio = []

[dependencies]
tokio = { version = "1", features = ["full"] }
nio = { path = "../libs/nio-rt" }
nio-future = { path = "../libs/nio-future" }
criterion = "0.7"

[dev-dependencies]

[[bench]]
name = "timer"
path = "timer.rs"
harness = false

[[bench]]
name = "spawn"
path = "spawn.rs"
harness = false

[[bench]]
name = "spawn_blocking"
path = "spawn_blocking.rs"
harness = false

[[bench]]
name = "rt_current_thread"
path = "rt_current_thread.rs"
harness = false

# [[bench]]
# name = "sync_mpsc_oneshot"
# path = "sync_mpsc_oneshot.rs"
# harness = false

# [[bench]]
# name = "sync_mpsc"
# path = "sync_mpsc.rs"
# harness = false

# [[bench]]
# name = "sync_notify"
# path = "sync_notify.rs"
# harness = false

# [[bench]]
# name = "sync_rwlock"
# path = "sync_rwlock.rs"
# harness = false

# [[bench]]
# name = "sync_semaphore"
# path = "sync_semaphore.rs"
# harness = false

# [[bench]]
# name = "sync_watch"
# path = "sync_watch.rs"
# harness = false

# [[bench]]
# name = "time_now"
# path = "time_now.rs"
# harness = false

# [[bench]]
# name = "time_timeout"
# path = "time_timeout.rs"
# harness = false