[package]
name = "benchmarks"
version = "0.0.0"
publish = false
edition = "2021"
license = "MIT"

[features]
tokio = []

[dependencies]
tokio = { version = "1", features = ["full"] }
nio = { path = "../libs/nio-rt" }
nio-future = { path = "../libs/nio-future" }
futures = "*"
criterion = "0.7"

[dev-dependencies]

[[bench]]
name = "timer"
path = "timer.rs"
harness = false

[[bench]]
name = "spawn"
path = "spawn.rs"
harness = false

[[bench]]
name = "spawn_blocking"
path = "spawn_blocking.rs"
harness = false

[[bench]]
name = "rt_current_thread"
path = "rt_current_thread.rs"
harness = false

[[bench]]
name = "rt_multi_threaded"
path = "rt_multi_threaded.rs"
harness = false
