[package]
name = "nio-macros"
version = "0.2.0"
edition = "2024"

license = "Apache-2.0"
keywords = ["nio", "macros"]
authors = ["Nur <nurmohammed840@gmail.com>"]
repository = "https://github.com/nurmohammed840/nio"
description = "procedural macros for nio"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote2 = "0.9"