[package]
name = "nio"
version = "0.1.4"
edition = "2024"

license = "Apache-2.0"
keywords = ["nio", "async", "task", "runtime"]
authors = ["Nur <nurmohammed840@gmail.com>"]
repository = "https://github.com/nurmohammed840/nio"
description = "Async runtime for Rust"

[dependencies]
nio-task = { path = "../nio-task", version = "0.2" }
nio-future = { path = "../nio-future", version = "0.0.1" }
nio-threadpool = { path = "../nio-threadpool", version = "0.1" }
nio-macros = { path = "../nio-macros", version = "0.3" }
nio-metrics = { path = "../nio-metrics", version = "0.0.0" }

mio = { version = "1", features = ["os-poll", "net"] }
crossbeam-queue = "0.3"
crossbeam-utils = "0.8"

futures-io = { version = "0.3", optional = true }
tokio = { version = "1", default-features = false, optional = true }

[features]
default = ["futures-io"]
metrics = []
tokio-io = ["dep:tokio"]
futures-io = ["dep:futures-io"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  "cfg(mio_unsupported_force_poll_poll)",
] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
futures-lite = { version = "2" }
futures = "0.3"
tokio-test = { version = "0.4.0" }
pin-project-lite = "0.2"

[[test]]
name = "async_io_test_suite"   # The name of the test binary
path = "tests/async-io/mod.rs"
