[package]
name = "nio-task"
version = "0.2.0"
edition = "2024"

license = "Apache-2.0"
keywords = ["nio", "async", "task"]
authors = ["Nur <nurmohammed840@gmail.com>"]
repository = "https://github.com/nurmohammed840/nio"
description = "async task implementation"

[dependencies]

[dev-dependencies]
nio = { path = "../nio-rt" }
atomic-waker = "1"
easy-parallel = "3"
flaky_test = "0.2"
flume = { version = "0.12", default-features = false }
smol = "2"